--- a/src/components/layout/footer/footer.module.less
+++ b/src/components/layout/footer/footer.module.less
@@ -4,4 +4,6 @@
     margin: @margin-medium @margin-medium @margin-zero @margin-medium;
     padding: @padding-small;
     text-align: right;
+    font-size: small;
+    font-family: monospace;
 }
