--- a/src/pages/about/index.module.less
+++ b/src/pages/about/index.module.less
@@ -30,6 +30,7 @@
     h1 {
         border-bottom: 1px solid @theme-title;
         padding-bottom: @padding-small;
+        color: #be74ad;
     }
     h2 {
         font-family: "CustomBoldFont", sans-serif;
